// Copyright (c) 2021 Contributors to the Eclipse Foundation
//
// See the NOTICE file(s) distributed with this work for additional
// information regarding copyright ownership.
//
// This program and the accompanying materials are made available under the
// terms of the Eclipse Public License 2.0 which is available at
// https://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
// which is available at https://www.apache.org/licenses/LICENSE-2.0.
//
// SPDX-License-Identifier: EPL-2.0 OR Apache-2.0

syntax = "proto3";

package github.com.eclipse_kanto.container_management.containerm.api.types.containers;

option go_package = "github.com/eclipse-kanto/container-management/containerm/api/types/containers;containers";

// IO configuration contains the streams to be attached to this container
message IOConfig {
   	// Whether to attach to `stderr`.
   	bool attach_stderr = 1;

   	// Whether to attach to `stdin`.
   	bool attach_stdin = 2;

   	// Whether to attach to `stdout`.
   	bool attach_stdout = 3;

   	// Open `stdin`
   	bool open_stdin = 4;

   	// Close `stdin` after one attached client disconnects
   	bool stdin_once = 5;

   	// Attach standard streams to a TTY, including `stdin` if it is not closed.
   	bool tty = 6;
}